Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12895

review-dne-selinux sanity test_185a: lu_object_attr()) ASSERTION( ((o)->lo_header->loh_attr & LOHA_EXISTS) != 0 ) failed

XMLWordPrintable

    • 3
    • 9223372036854775807

      This issue relates to the following test run:
      https://testing.whamcloud.com/test_sets/ace7187a-f4bc-11e9-a0ba-52540065bddc

      test_185a failed with an assertion:

      [10686.971926] Lustre: DEBUG MARKER: /usr/sbin/lctl mark == sanity test 185a: Volatile file creation in .lustre\/fid\/ ========================================== 09:00:55 \(1571734855\)
      [10687.512209] Lustre: DEBUG MARKER: == sanity test 185a: Volatile file creation in .lustre/fid/ ========================================== 09:00:55 (1571734855)
      [10691.825999] LustreError: 29154:0:(lu_object.h:840:lu_object_attr()) ASSERTION( ((o)->lo_header->loh_attr & LOHA_EXISTS) != 0 ) failed: 
      [10691.828135] LustreError: 29154:0:(lu_object.h:840:lu_object_attr()) LBUG
      [10691.829269] Pid: 29154, comm: mdt00_006 3.10.0-957.27.2.el7_lustre.x86_64 #1 SMP Mon Sep 30 22:09:27 UTC 2019
      [10691.830887] Call Trace:
      [10691.831366]  [] libcfs_call_trace+0x8c/0xc0 [libcfs]
      [10691.832550]  [] lbug_with_loc+0x4c/0xa0 [libcfs]
      [10691.833816]  [] mo_attr_get.part.35+0x0/0x36 [mdt]
      [10691.835117]  [] mdt_getattr_name_lock+0x1974/0x1c90 [mdt]
      [10691.836381]  [] mdt_intent_getattr+0x2b5/0x480 [mdt]
      [10691.837566]  [] mdt_intent_opc+0x1ba/0xb40 [mdt]
      [10691.838731]  [] mdt_intent_policy+0x1a4/0x360 [mdt]
      [10691.839860]  [] ldlm_lock_enqueue+0x356/0xa20 [ptlrpc]
      [10691.841180]  [] ldlm_handle_enqueue0+0xa56/0x15f0 [ptlrpc]
      [10691.842528]  [] tgt_enqueue+0x62/0x210 [ptlrpc]
      [10691.843786]  [] tgt_request_handle+0x97a/0x1620 [ptlrpc]
      [10691.844994]  [] ptlrpc_server_handle_request+0x256/0xb10 [ptlrpc]
      [10691.846378]  [] ptlrpc_main+0xbac/0x1540 [ptlrpc]
      [10691.847524]  [] kthread+0xd1/0xe0
      [10691.848455]  [] ret_from_fork_nospec_end+0x0/0x39
      [10691.849594]  [] 0xffffffffffffffff
      [10691.850731] Kernel panic - not syncing: LBUG
      [10691.851439] CPU: 0 PID: 29154 Comm: mdt00_006 Kdump: loaded Tainted: G           OE  ------------   3.10.0-957.27.2.el7_lustre.x86_64 #1
      [10691.853423] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011
      [10691.854379] Call Trace:
      [10691.854798]  [] dump_stack+0x19/0x1b
      [10691.855733]  [] panic+0xe8/0x21f
      [10691.856566]  [] lbug_with_loc+0x9b/0xa0 [libcfs]
      [10691.857638]  [] lu_object_attr.isra.32.part.33+0x36/0x36 [mdt]
      [10691.858877]  [] mdt_getattr_name_lock+0x1974/0x1c90 [mdt]
      [10691.860063]  [] ? lustre_msg_buf+0x17/0x60 [ptlrpc]
      [10691.861165]  [] ? __req_capsule_get+0x163/0x740 [ptlrpc]
      [10691.862327]  [] ? lustre_msg_get_flags+0x2c/0xa0 [ptlrpc]
      [10691.863503]  [] mdt_intent_getattr+0x2b5/0x480 [mdt]
      [10691.864569]  [] mdt_intent_opc+0x1ba/0xb40 [mdt]
      [10691.865611]  [] ? lustre_swab_ldlm_policy_data+0x30/0x30 [ptlrpc]
      [10691.866871]  [] ? mdt_intent_layout+0xe00/0xe00 [mdt]
      [10691.867970]  [] mdt_intent_policy+0x1a4/0x360 [mdt]
      [10691.869039]  [] ldlm_lock_enqueue+0x356/0xa20 [ptlrpc]
      [10691.870152]  [] ? cfs_hash_bd_add_locked+0x63/0x80 [libcfs]
      [10691.871333]  [] ? cfs_hash_add+0xbe/0x1a0 [libcfs]
      [10691.872387]  [] ldlm_handle_enqueue0+0xa56/0x15f0 [ptlrpc]
      [10691.873553]  [] ? lustre_swab_ldlm_lock_desc+0x30/0x30 [ptlrpc]
      [10691.874818]  [] tgt_enqueue+0x62/0x210 [ptlrpc]
      [10691.875841]  [] tgt_request_handle+0x97a/0x1620 [ptlrpc]
      [10691.877028]  [] ? libcfs_nid2str_r+0xfe/0x130 [lnet]
      [10691.878117]  [] ptlrpc_server_handle_request+0x256/0xb10 [ptlrpc]
      [10691.879352]  [] ? __wake_up+0x44/0x50
      [10691.880242]  [] ptlrpc_main+0xbac/0x1540 [ptlrpc]
      [10691.881269]  [] ? finish_task_switch+0x50/0x1c0
      [10691.882287]  [] ? ptlrpc_register_service+0xf90/0xf90 [ptlrpc]
      [10691.883486]  [] kthread+0xd1/0xe0
      [10691.884267]  [] ? insert_kthread_work+0x40/0x40
      [10691.885252]  [] ret_from_fork_nospec_begin+0x21/0x21
      [10691.886292]  [] ? insert_kthread_work+0x40/0x40
      

            sebastien Sebastien Buisson
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: