lustre/mdt/mdt_handler.c
@@ -1927,9 +1927,9 @@ static int mdt_getattr_name_lock(struct mdt_thread_info *info,
 			 PLDLMRES(lock->l_resource),
 			 PFID(mdt_object_fid(child)));
 
-		if (S_ISREG(lu_object_attr(&child->mot_obj)) &&
-		    mdt_object_exists(child) && !mdt_object_remote(child) &&
-		    child != parent) {
+		if (mdt_object_exists(child) &&
+		    S_ISREG(lu_object_attr(&child->mot_obj)) &&
+		    !mdt_object_remote(child) && child != parent) {
 			mdt_object_put(info->mti_env, child);
 			rc = mdt_pack_size2body(info, child_fid,
 						&lhc->mlh_reg_lh);
